--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,177 @@
+* {
+  font-family: 'Sofia Pro', sans-serif;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
   background-color: #D4BBE3;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.App {
+  display: flex;
+  flex-direction: column;
+}
+
+.app-header {
+  text-align: center;
+}
+
+.addBtn {
+  background-color: #417D7A;
+  padding: 1em 2em;
+  border: none;
+  box-shadow: 0px 15px 45px rgb(16 30 54 / 15%);
+  font-size: 1.25rem;
+  color: white;
+  cursor: pointer;
+  opacity: 0.8;
+}
+
+.addBtn:hover {
+  opacity: 1;
+}
+
+.board {
+  display: flex;
+  justify-content: center;
+}
+
+@media only screen and (max-width: 600px){
+  .board{
+    flex-direction: column;
+  }
+
+  .category-group{
+  }
+}
+
+.modal {
+  min-width: 350px;
+  min-height: 250px;
+  z-index: 10;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.modal-title,.modal-content,.modal-staff{
+  padding: 1em;
+  border-radius: 5px;
+}
+
+.button-container{
+  display: flex;
+  text-align: center;
+  justify-content: space-evenly;
+}
+
+.button-container > button{
+  padding: 0.5rem 1rem;
+  border: none;
+  border-radius: 2px;
+  box-shadow: 0 5px 20px 0 rgba(0, 0, 0, 0.25);
+}
+
+.submitBtn{
+  background-color: #007BFF;
+  color: white;
+}
+
+.overlay {
+  background-color: rgba(0, 0, 0, 0.2);
+  width: 100vw;
+  height: 100vh;
+  z-index: 1;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  position: absolute;
+}
+
+.category-group {
+  display: flex;
+  flex-direction: column;
+  margin:0.5em;
+  width: 100%;
+}
+
+.category-title {
+  padding: 1.5em;
+  font-size: 1.25rem;
+  text-align: center;
+  color: azure;
+}
+
+.red-bg {
+  background-color: #E2445B;
+}
+
+.yellow-bg {
+  background-color: #FDAB3D;
+}
+
+.olive-bg {
+  background-color: #93ad3b;
+}
+
+.green-bg {
+  background-color: #27C875;
+}
+
+.task-note {
+  border: none;
+  border-radius: 5px;
+  background-color: white;
+  cursor: pointer;
+  box-shadow: 0 5px 20px 0 rgba(0, 0, 0, 0.25);
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  margin: 1.25rem auto;
+  padding: 1rem;
+}
+
+.task-title,
+.task-content,.task-staff,.modal-title,.modal-content {
+  outline: none;
+  border: none;
+  resize: none;
+}
+
+.task-title {
+  font-size: 1.1rem;
+  font-weight:400;
+}
+
+.task-content {
+  font-size: 1rem;
+}
+
+.staff-container{
+  display: flex;
+  align-items:center;
+  border-bottom: solid lightgrey;
+  margin-bottom: 1rem;
+}
+
+.task-staff{
+  font-size: 1rem;
+  font-weight: 600;
+  width: 100%;
+}
+.staff-icon{
+  width: 10%;
+  margin-right: 1rem;
+}
+
+.deleteBtn {
+  width: 15%;
+  align-self: flex-end;
+  opacity: 0.5;
+  transition: all 0.5s;
+}
+
+.deleteBtn:hover {
+  opacity: 1;
 }
